Copy Constructor and Shallow Copy

--- a/cpp_class/cpp_class/Makefile
+++ b/cpp_class/cpp_class/Makefile
@@ -1,8 +1,8 @@
 .PHONY: clean All
 
 All:
-	@echo "----------Building project:[ default_constructor - Debug ]----------"
-	@cd "C:\Users\user\Desktop\College\Cpp_codes\cpp_class\default_constructor" && "$(MAKE)" -f  "default_constructor.mk"
+	@echo "----------Building project:[ ShallowCopy - Debug ]----------"
+	@cd "C:\Users\user\Desktop\College\Cpp_codes\cpp_class\ShallowCopy" && "$(MAKE)" -f  "ShallowCopy.mk"
 clean:
-	@echo "----------Cleaning project:[ default_constructor - Debug ]----------"
-	@cd "C:\Users\user\Desktop\College\Cpp_codes\cpp_class\default_constructor" && "$(MAKE)" -f  "default_constructor.mk" clean
+	@echo "----------Cleaning project:[ ShallowCopy - Debug ]----------"
+	@cd "C:\Users\user\Desktop\College\Cpp_codes\cpp_class\ShallowCopy" && "$(MAKE)" -f  "ShallowCopy.mk" clean
